results/archive/b60/compile_global_avg_pool_nhwc_fp16_kernel.dp_20260309_124422.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260309_124422
Kernel: global_avg_pool_nhwc_fp16_kernel.dp
Source: /workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:43:20: error: use of undeclared identifier 'item'
   43 |   int blockStart = item.get_group(0) * item.get_local_range(0);
      |                    ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:43:40: error: use of undeclared identifier 'item'
   43 |   int blockStart = item.get_group(0) * item.get_local_range(0);
      |                                        ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:49:26: error: use of undeclared identifier 'item'
   49 |     int localIndex = i * item.get_local_range(0) + item.get_local_id(0);
      |                          ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:49:52: error: use of undeclared identifier 'item'
   49 |     int localIndex = i * item.get_local_range(0) + item.get_local_id(0);
      |                                                    ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:57:51: error: use of undeclared identifier 'item'
   57 |   if (prevLayerBias) avg += (float)(prevLayerBias[item.get_local_id(0)]);
      |                                                   ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:59:30: error: use of undeclared identifier 'item'
   59 |   int opIndex = blockStart + item.get_local_id(0);
      |                              ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:65:63: error: unknown type name 'cudaStream_t'; did you mean 'ihipStream_t'?
   65 |                              const sycl::half* prevLayerBias, cudaStream_t stream) {
      |                                                               ^~~~~~~~~~~~
      |                                                               ihipStream_t
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: 'ihipStream_t' declared here
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:65:76: error: variable has incomplete type 'ihipStream_t'
   65 |                              const sycl::half* prevLayerBias, cudaStream_t stream) {
      |                                                                            ^
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/detail/backend_traits_hip.hpp:26:16: note: forward declaration of 'ihipStream_t'
   26 | typedef struct ihipStream_t *HIPstream;
      |                ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:68:35: error: expected expression
   68 |   globalAvgPool_kernel_NHWC_fp16<<<N, C, 0, stream>>>(
      |                                   ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:68:53: error: expected expression
   68 |   globalAvgPool_kernel_NHWC_fp16<<<N, C, 0, stream>>>(
      |                                                     ^
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:69:7: warning: left operand of comma operator has no effect [-Wunused-value]
   69 |       output, input, prevLayerBias, N * C * kPlaneSize, N * C);
      |       ^~~~~~
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:69:15: warning: left operand of comma operator has no effect [-Wunused-value]
   69 |       output, input, prevLayerBias, N * C * kPlaneSize, N * C);
      |               ^~~~~
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:69:22: warning: left operand of comma operator has no effect [-Wunused-value]
   69 |       output, input, prevLayerBias, N * C * kPlaneSize, N * C);
      |                      ^~~~~~~~~~~~~
/workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp:69:43: warning: left operand of comma operator has no effect [-Wunused-value]
   69 |       output, input, prevLayerBias, N * C * kPlaneSize, N * C);
      |                                     ~~~~~ ^ ~~~~~~~~~~
4 warnings and 10 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260309_124422'
+ echo 'Kernel: global_avg_pool_nhwc_fp16_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/global_avg_pool_nhwc_fp16_kernel.dp.cpp -o /workspace/build_sycl/global_avg_pool_nhwc_fp16_kernel.dp.o
+ tee /workspace/results/b60/compile_global_avg_pool_nhwc_fp16_kernel.dp_20260309_124422.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
